<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edittext_name"
        android:layout_margin="5dp"
        android:hint="@string/enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text" />


    <EditText
        android:id="@+id/edittext_email"
        android:layout_margin="5dp"
        android:hint="@string/enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="textEmailAddress" />


    <Button
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:id="@+id/button_add"
        android:text="@string/add_employee"
        android:background="#388E3C"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <Button
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:id="@+id/button_view"
        android:text="@string/view_employee"
        android:background="#0288D1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>