<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <TextView
        android:textColor="#000"
        android:id="@+id/text_id"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:text="@string/id"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:textColor="#000"
        android:textStyle="bold"
        android:id="@+id/edittext_name"
        android:text="@string/name"
        android:layout_margin="5dp"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="LabelFor" />

    <EditText
        android:textColor="#000"
        android:textStyle="bold"
        android:id="@+id/edittext_email"
        android:text="@string/email"
        android:layout_margin="5dp"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center">

        <Button
            android:background="#0288D1"
            android:id="@+id/button_edit"
            android:layout_weight="2"
            android:text="@string/edit"
            android:textColor="@color/black"
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_margin="2dp"
            android:background="#D32F2F"
            android:id="@+id/button_delete"
            android:layout_weight="2"
            android:text="@string/delete"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <View
        android:layout_margin="5dp"
        android:background="#C5C5C5"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

</LinearLayout>